--- a/_pages/Il_rifugio_dell_ircocervo/Il_rifugio_dell_ircocervo.html
+++ b/_pages/Il_rifugio_dell_ircocervo/Il_rifugio_dell_ircocervo.html
@@ -1,6 +1,6 @@
 ---
 layout: home
-title: Il rifugio dell'ircocervo
+title: Il_rifugio_dell_ircocervo
 permalink: /category/Il_rifugio_dell_ircocervo/
 ---
 {% include header.html %}
