--- a/index.html
+++ b/index.html
@@ -36,4 +36,5 @@ layout: home
 {% if postsCovered < postCount %}
   <button class="c-load-more c-btn c-btn--middle">Carica altri racconti</button>
 {% endif %}
+{% include random.html %}
 {% include categories.html %}
