--- a/random.html
+++ b/random.html
@@ -1,7 +1,7 @@
 ---
 layout: post
 title: Una lettura per te
-permalink: /random-post/
+permalink: /random-postxxxxxxxxxxxx/
 ---
 
 <script type="text/javascript">
