--- a/random.html
+++ b/random.html
@@ -1,5 +1,5 @@
 ---
-layout: post
+layout: home
 title: Una lettura per te
 permalink: /random-post/
 ---
@@ -52,5 +52,4 @@ permalink: /random-post/
         }
     }
 
-</script>
 </script>
